--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Oracle/WINDOWS.X64_193000_db_home/jdbc/lib/ojdbc8.jar">
+	<classpathentry kind="lib" path="C:/Users/kosa/Downloads/WINDOWS.X64_193000_db_home/jdbc/lib/ojdbc8.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
